@@ -39,8 +39,11 @@ my $build = $class->new(
     license            => 'perl',
     create_makefile_pl => 'passthrough',
     configure_requires => { 'Module::Build' => '0.2701' },
-    build_requires     => { 'Test::More'    => '0.17'   },
     recommends         => { 'Test::Pod'     => '1.20'   },
     requires           => { File::Spec    => 0          },
+    build_requires     => {
+        'Module::Build' => '0.2701',
+        'Test::More'    => '0.17',
+    },
 );
 $build->create_build_script;
