@@ -1019,7 +1019,7 @@ L<http://www.ossp.org/pkg/lib/uuid/> is the OSSP UUID home page.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (c) 2002-2005, David Wheeler. All Rights Reserved.
+Copyright (c) 2002-2008, David Wheeler. Some Rights Reserved.
 
 This module is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
