@@ -896,7 +896,7 @@ L<http://www.sqlite.org/> is the SQLite home page.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (c) 2004, David Wheeler. All Rights Reserved.
+Copyright (c) 2004-2008, David Wheeler. Some Rights Reserved.
 
 This module is free software; you can redistribute it and/or modify it under the
 same terms as Perl itself.
