@@ -3,6 +3,7 @@ Revision history for Perl extension App::Info.
 0.53
       - Added the "configure_requires" and "build_requires" parameters to
         Build.PL.
+      - Updated Copyright.
 
 0.52  2007-08-13T18:24:54
       - Fixed test failures on Win32 in 't/util.t.' Reported by Alex Chorny
